syntax = "proto3";
package services;
//引用外部proto
import "models.proto";
option go_package = "../services";

message UserScoreRequest{
  repeated UserInfo users = 1;
}
message UserScoreResponse{
  repeated UserInfo users = 1;
}

service UserService{
  rpc GetUserScore(UserScoreRequest) returns(UserScoreResponse);

  //服务端流模式（服务端分批发送）
  rpc GetUserScoreByServerStream(UserScoreRequest) returns(stream UserScoreResponse);

  //客户端流模式
  rpc GetUserScoreByClientStream(stream UserScoreRequest) returns(UserScoreResponse);

  //双向流
  rpc GetUserScoreByTws(stream UserScoreRequest) returns(stream UserScoreResponse);
}